# Management-Tools-Analysis

./: .cursorrules  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_SIMPLIFIED.md  AUTO_FORK_GUIDE.md  BILINGUAL_DEPLOYMENT_SUMMARY.md  BUILD_PROGRESS_GUIDE.md  COROUTINE_FIX_SUMMARY.md  CSV_PROCESSING_README.md  DASHBOARD_ANALYSIS_NOTES.md  DATABASE_IMPLEMENTATION_PLAN.md  DATABASE_README.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOY_KEY_FINDINGS.md  DEPLOY_KEY_FINDINGS_DOKPLOY.md  DOCKERFILE_FIX_APPLIED.md  DOCKER_LOCAL_TESTING.md  DOCKER_QUICK_START.md  DOCKER_TRANSLATION_FIX_SUMMARY.md  Dockerfile  FIXES_APPLIED.md  FORK_QUICK_REFERENCE.md  GROQ_MODEL_OPTIMIZATION_SUMMARY.md  GROQ_OPENROUTER_IMPLEMENTATION_SUMMARY.md  KEY_FINDINGS_ARCHITECTURE.md  KEY_FINDINGS_COMPLETE_GUIDE.md  KEY_FINDINGS_DEVELOPMENT_PROGRESS.md  KEY_FINDINGS_FIXES_SUMMARY.md  KEY_FINDINGS_FORK_EXECUTION_GUIDE.md  KEY_FINDINGS_GIT_WORKFLOW.md  KEY_FINDINGS_IMPLEMENTATION_PLAN.md  KEY_FINDINGS_IMPLEMENTATION_SUMMARY.md  KEY_FINDINGS_INTERACTIVE_WORKFLOW.md  KEY_FINDINGS_LOCAL_DOCKER_QUICK_START.md  KEY_FINDINGS_MAPPING_FIX_SUMMARY.md  KEY_FINDINGS_PERSISTENT_STORAGE.md  KEY_FINDINGS_QUICK_START.md  (+133 more)
dashboard_app/: BILINGUAL_README.md  BROWSER_LANGUAGE_DETECTION.md  CHANGES_SUMMARY.md  COLUMN_MAPPING_FIX_SUMMARY.md  DATAFRAME_INDEXING_FIX_SUMMARY.md  DOCKER_TEST_RESULTS.md  DOCKER_TRANSLATION_FIX_SUMMARY.md  README.md  REGRESSION_ANALYSIS_FIX_SUMMARY.md  REGRESSION_FIX_SUMMARY.md  REGRESSION_FIX_V2_SUMMARY.md  SOURCE_MAPPING_SOLUTION.md  TRANSLATION_FIXES_SUMMARY.md  app.py  (+44 more)
(+3312 files in other folders)
